# ida-pro-mcp-cpp

./: .gitignore  BUILD.md  CMakeLists.txt  QUICKSTART.md  build-all.sh  install.bat  install.sh  setup-mingw-deps.sh  todo.txt
.claude/: settings.local.json
cmake/: toolchain-mingw64.cmake
include/common/: ida_compat.hpp  ida_helpers.hpp  ida_includes.hpp  ida_wrapper.hpp  types.hpp
include/http/: auth.hpp  handlers.hpp  server.hpp
include/tools/: all_tools.hpp  database_info.hpp  generic_tool.hpp  get_function_at.hpp  list_functions.hpp  read_bytes.hpp  tool_interface.hpp  tool_registry.hpp
src/: main.cpp
src/http/: auth.cpp  handlers.cpp  server.cpp
src/tools/: database_info.cpp  get_function_at.cpp  list_functions.cpp  read_bytes.cpp  tool_registry.cpp
